# cursed_fibonacci

./: Cargo.toml  Readme.md
src/: const_generics.rs  main.rs
