[package]
name = "cursed_fibonacci"
version = "0.1.0"
edition = "2021"

description = "A collection of fibonacci sequence implementations, a couple of which are not insane."
readme = "Readme.md"

authors = ["Reinis Mazeiks"]
license = "MIT OR Apache-2.0"

[dependencies]

[[bin]]
name="const_generics"
path="src/const_generics.rs"